# contract-validate

./: .gitignore  Makefile  README.md  pyproject.toml  validate.py
config/: default.yaml
data/clauses/: clausulas_anotadas.json
data/contracts/: exemplo_conflito.txt  exemplo_patrocinio.txt
data/knowledge_base/: afirmacoes_exemplo.json  predicados_dinamicos.json
docs/: DISSERTACAO_TECNICA.md
scripts/: generate_dataset.py  run_experiment.py
src/contractfol/: __init__.py  cli.py  dynamic_ontology.py  knowledge_base.py  models.py  ontology.py  pipeline.py  predicate_discovery.py
src/contractfol/api/: __init__.py
src/contractfol/classifiers/: __init__.py  deontic_classifier.py
src/contractfol/detectors/: __init__.py  abusive_clause_detector.py
src/contractfol/evaluation/: __init__.py  experiment.py  metrics.py
src/contractfol/extractors/: __init__.py  clause_extractor.py
src/contractfol/generators/: __init__.py  explanation_generator.py
src/contractfol/knowledge/: __init__.py  legal_rules.py
src/contractfol/translators/: __init__.py  nl_fol_translator.py
src/contractfol/utils/: __init__.py  document_loader.py
src/contractfol/verifiers/: __init__.py  z3_verifier.py
tests/: __init__.py  conftest.py  test_abusive_detector.py  test_pipeline.py
